--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,44 @@
 {
-	"name": "server",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "tsc && node dist/index.js",
-		"dev": "nodemon --exec ts-node --compiler typescript src/index.ts",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"dotenv": "^16.4.5",
-		"express": "^4.19.2",
-		"typescript": "^5.4.3"
-	},
-	"devDependencies": {
-		"@types/express": "^4.17.21",
-		"@types/node": "^20.12.4",
-		"nodemon": "^3.1.0"
-	}
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "main.js",
+    "scripts": {
+        "start": "tsc && node dist/main.js",
+        "lint": "eslint src",
+        "lint:fix": "eslint src --fix",
+        "format": "prettier --write \"src/**/*.+(js|jsx|json|css|scss|ts|tsx)\"",
+        "dev": "nodemon --exec ts-node --compiler typescript src/main.ts",
+        "test": "jest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.549.0",
+        "@aws-sdk/lib-dynamodb": "^3.549.0",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "express-async-handler": "^1.2.0",
+        "express-session": "^1.18.0",
+        "http-status-codes": "^2.3.0",
+        "twitter-api-v2": "^1.16.1"
+    },
+    "devDependencies": {
+        "@faker-js/faker": "^8.4.1",
+        "@types/express": "^4.17.21",
+        "@types/express-session": "^1.18.0",
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20.12.4",
+        "@typescript-eslint/eslint-plugin": "^7.6.0",
+        "@typescript-eslint/parser": "^7.6.0",
+        "eslint": "^8.0.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.0",
+        "prettier": "^3.2.5",
+        "ts-jest": "^29.1.2",
+        "typescript": "^5.4.3"
+    }
 }
